--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "solarized-dark-syntax",
+  "name": "solarized-dark-apparent-syntax",
   "theme": "syntax",
   "version": "0.18.0",
-  "description": "A dark syntax theme using the solarized colors",
+  "description": "A dark syntax theme using the solarized colors with slightly more apparent but still thematic colors",
   "repository": "https://github.com/atom/solarized-dark-syntax",
   "license": "MIT",
   "engines": {
