--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solarized-dark-apparent-syntax",
   "theme": "syntax",
-  "version": "v0.20.0",
+  "version": "0.20.1",
   "description": "A dark syntax theme using the solarized colors with slightly more apparent but still thematic colors",
   "repository": "https://github.com/joshnroy/solarized-dark-apparent-syntax",
   "license": "MIT",
